style.css
/*/ Base /*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

li {
    list-style: none;
}

html, body {
    width: 100%;
    height: 100%;
}

.bold {
    font-weight: bold;
}

.hidden {
    opacity: 0;
}

/*/ html /*/

html {
    font-family: Inter;
    overflow: hidden;

    /* Interface */
    --z-footer: 0;
    --z-navigation: 2;
    --z-header: 0;
    --z-image-preview: 8;
    --z-aside: 4;
    --z-history-image: 5;
}

/*/ body /*/

body {
    display: grid;
    grid-template-areas:
        "aside history   settings"
        "aside article   settings"
        "aside shortcuts settings";
    grid-template-rows: auto 1fr auto;
    grid-template-columns: var(--aside-width) 1fr var(--aside-width);
    background: var(--body-background);
    border: var(--global-border-size) solid var(--global-border-color);
}

/*/ Sidebar /*/

aside {
    font-family: Trash;
    display: flex;
    justify-content: space-between;
    padding: var(--main-padding) 0;
    color: var(--dark);
    grid-area: aside;
    writing-mode: tb;
    transform: rotate(180deg);
    font-size: 30px;
    line-height: calc(var(--aside-width) + 0.215em);
    white-space: nowrap;
    border-left: var(--global-border-size) solid var(--global-border-color);
    overflow: hidden;
    box-sizing: content-box;
    background: var(--aside-background);
    z-index: var(--z-aside);
    width: var(--aside-width);
}

.clock {
    font-weight: normal;
}

/*/ History /*/

header {
    position: relative;
    grid-area: history;
    display: flex;
    overflow: hidden;
    padding: var(--main-padding);
    padding-bottom: 0;
    z-index: var(--z-header);
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.history {
    display: flex;
    font-size: 30px;
    color: var(--history-base);
}

.history::after {
    /* This ensures that the header will have a height even before
       the first entry is being pushed. */
    content: "*";
    opacity: 0;
}

.history li {
    cursor: pointer;
    white-space: nowrap;
}

.history li::after {
    /* color: var(--history-base); */
    content: " <-";
    white-space: pre;
    margin-right: -0.3ex;
}

.history li[data-chain="start"]::after {
    content: " ⁂ ";
    margin-right: 1ex;
}

.history li span,
.history::after {
    pointer-events: none;
    position: relative;
    display: inline-block;
    box-shadow: inset 0 0 0 2px var(--history-base);
    border-radius: var(--ui-button-border-radius);
    padding: .25ex .9ex;
}

.history li:first-of-type span,
.history li:hover span {
    background: var(--history-base);
    color: var(--history-contrast);
}

/*/ Navigation /*/

nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    align-items: center;
    justify-content: center;
    z-index: var(--z-navigation);
    display: flex;
    opacity: 0;
    transition: opacity 125ms ease-in-out;
    pointer-events: none;
}

nav[data-is-visible=true] {
    opacity: 1;
}

#navSelect {
    /* TODO: Also subtract borders and some padding. */
    max-width: min(900px, calc(100vw - var(--aside-width) * 2));
}

.navOption {
    margin-top: 1.5ex;
    display: flex;
}

.navOption:first-child {
    margin-top: 0;
}

[data-navOptionIdx] {
    width: var(--upcoming-option-height);
    height: var(--upcoming-option-height);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--upcoming-option-font-size);
    border-radius: var(--upcoming-option-height);
    border-bottom-right-radius: 0;
    flex-shrink: 0;
}

[data-navOptionIdx="0"]::before { content: ""; }
[data-navOptionIdx="1"]::before { content: "➀"; }
[data-navOptionIdx="2"]::before { content: "➁"; }
[data-navOptionIdx="3"]::before { content: ""; }
[data-is-available="false"] [data-navOptionIdx]::before { content: ""; }

.navOptionTitle {
    height: var(--upcoming-option-height);
    font-size: var(--upcoming-option-font-size);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    padding: 0 1.5ex;
    border-radius: var(--upcoming-option-height);
    border-bottom-left-radius: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    display: block;
    line-height: var(--upcoming-option-height);
}

.navOption:first-child .navOptionTitle {
    border-top-left-radius: 0;
    border-bottom-left-radius: var(--upcoming-option-height);
    margin-left: -1px;
}

.navOption:first-child [data-navOptionIdx] {
    border-top-right-radius: 0;
    border-bottom-right-radius: var(--upcoming-option-height);
}

[data-is-available="false"] .navOptionTitle:empty::before {
    content: "L̷͇̇ő̷͓a̴̗͑d̷̲͌i̷͉͛n̶͚̈g̸͓̽…̴̯̂";
}

/*/ Loading Spinner /*/

#loadingSpinner {
    display: flex;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    color: var(--article-loading-spinner-color);
}

/*** ——— Article ——— ***/

article {
    --article-frame-timing: 512ms ease-in-out;
    grid-area: article;
    position: relative;
}

#articleInput {
    position: absolute;
    pointer-events: none;
    left: var(--k-article-token-x);
    top: var(--k-article-token-y);
    font: inherit;
    border: 0;
    background: none;
    color: transparent;
    z-index: 100000;
    caret-color: var(--article-caret-color);
    /* Makes the carret visible on an empty node */
    min-width: 1px;
}

#articleInput:focus {
    outline: none;
}


/*** ——— Article Frame ——— ***/

#articleFrame {
    /* TODO: Include border */
    position: fixed;
    top: 0;
    left: calc(var(--aside-width));
    width: calc(100vw - var(--aside-width) * 2);
    height: 100vw;
    background: var(--article-frame-background);
    transition: background var(--article-frame-timing);
    z-index: -1;
}
/* ... */

